udocker (1.1.4-1)
  * Fix run --location
  * Documentation improvements

udocker (1.1.4)
  * Use hub.docker.com as default registry
  * Search using v1 and v2 APIs
  * Implement API /v2/search/repositories
  * Adjust search results to screen size
  * List container size with ps -s
  * List container execution modes with ps -m
  * Added support for nameat() and statx() in Pn and Fn modes
  * Added Fn libraries for Ubuntu18, Ubuntu19, Fedora29, Fedora30, Fedora31, CentOS8
  * Added Fn libraries for Alpine 3.8, 3.9, 3.10, 3.11
  * Added support for sha512 hashes
  * Added support for opaque whiteouts
  * Added search --list-tags to available tags for a given repository
  * Add CLI support for image names in format host/repository:tag
  * Support for fake root in Sn execution modes via --user=root
  * Improve verify of loaded/pulled images
  * Improve handling of mountpoints
  * Added --containerauth to enable direct use of the container passwd and group
  * Added support for file mount bindings in singularity
  * Added UDOCKER_USE_PROOT_EXECUTABLE env var to select proot location
  * Added UDOCKER_USE_RUNC_EXECUTABLE env var to select runc location
  * Added UDOCKER_USE_SINGULARITY_EXECUTABLE env var to select singularity
  * Added UDOCKER_DEFAULT_EXECUTION_MODE env var to select default execution mode
  * Added R2 and R3 execution modes for PRoot overlay execution in runc
  * Added setup --purge for cleanup of mountpoints and files 
  * Added setup --fixperms to fix container file permissions
  * Added run --env-file= to load file with environment variables
  * Improve file and directory binding support for Singularity and runc
  * Add command rename for renaming of containers
  * Create processes without shell context
  * Safer parsing of config files and removal of directories
  * Improve installation
  * Improved fix of SECCOMP accelerated mode for P1 mode
  * Added loading and handling of container images in OCI format
  * Fixes for udocker in ARM aarch64